# maya-poetry-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: LICENSE  maya.bat  mayapy.bat  pyproject.toml  {{ cookiecutter.package_name }}.mod
{{ cookiecutter.project_slug }}/modules/: {{ cookiecutter.package_name }}.mod
{{ cookiecutter.project_slug }}/scripts/: userSetup.py
{{ cookiecutter.project_slug }}/scripts/{{ cookiecutter.package_name }}/: __init__.py
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.package_name }}.py
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/modules/: {{cookiecutter.package_name}}.mod
{{cookiecutter.project_slug}}/scripts/: userSetup.py
{{cookiecutter.project_slug}}/scripts/{{cookiecutter.package_name}}/: __init__.py  startup.py
